[gd_scene load_steps=2 format=3 uid="uid://c6c176h6l0jjk"]

[ext_resource type="Script" uid="uid://obkst2j2oklu" path="res://scenes/ui/save_menu/save_menu.gd" id="1_n51rq"]

[node name="SaveMenu" type="CanvasLayer"]
script = ExtResource("1_n51rq")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -115.0
offset_right = 208.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Text" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Save?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SaveGame" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save
"

[node name="Cancel" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel
"

[node name="Button" type="Button" parent="."]
offset_left = 381.0
offset_top = 161.0
offset_right = 550.0
offset_bottom = 201.0
text = "DEBUG: clear"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
